--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"displayName": "vscode-frez",
 	"publisher": "frez",
 	"description": "",
-	"version": "0.0.8",
+	"repository": "",
+	"version": "0.0.9",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
