--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "frez",
 	"description": "",
 	"repository": "https://github.com/jacktrades/vscode-frez",
-	"version": "0.0.16",
+	"version": "0.0.17",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -39,6 +39,7 @@
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js"
 	},
+	"#extensionDependencies": [],
 	"devDependencies": {
 		"@types/vscode": "^1.52.0",
 		"@types/glob": "^7.1.3",
