--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "frez",
 	"description": "",
 	"repository": "https://github.com/jacktrades/vscode-frez",
-	"version": "0.0.39",
+	"version": "0.0.40",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -17,6 +17,10 @@
 	"main": "./dist/extension.js",
 	"contributes": {
 		"commands": [
+			{
+				"command": "vscode-frez.log",
+				"title": "Frez - Log"
+			},
 			{
 				"command": "vscode-frez.moveUpChunk",
 				"title": "Frez - Move Up Chunk"
@@ -46,7 +50,6 @@
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js"
 	},
-	"#extensionDependencies": [],
 	"devDependencies": {
 		"@types/vscode": "^1.52.0",
 		"@types/glob": "^7.1.3",
@@ -62,5 +65,9 @@
 		"ts-loader": "^8.0.11",
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0"
-	}
+	},
+	"dependencies": {
+		"jsonc-parser": "3.0.0"
+	},
+	"#extensionDependencies": []
 }
