--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "frez",
 	"description": "",
 	"repository": "https://github.com/jacktrades/vscode-frez",
-	"version": "0.0.45",
+	"version": "0.0.46",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -20,6 +20,10 @@
 			{
 				"command": "vscode-frez.log",
 				"title": "Frez - Log"
+			},
+			{
+				"command": "vscode-frez.inspectContextKeys",
+				"title": "Frez - Inspect Context Keys"
 			},
 			{
 				"command": "vscode-frez.moveUpChunk",
@@ -66,8 +70,11 @@
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0"
 	},
-	"dependencies": {
+	"#dependencies": {
 		"jsonc-parser": "3.0.0"
+	},
+	"dependencies": {
+		"comment-json": "4.1.0"
 	},
 	"#extensionDependencies": []
 }
