--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "frez",
 	"description": "",
 	"repository": "https://github.com/jacktrades/vscode-frez",
-	"version": "0.0.49",
+	"version": "0.0.50",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -44,6 +44,10 @@
 			{
 				"command": "vscode-frez.reindentSelectedLines",
 				"title": "Frez - Reindent Selected Lines"
+			},
+			{
+				"command": "vscode-frez.formatSelectedLines",
+				"title": "Frez - Format Selected Lines"
 			},
 			{
 				"command": "vscode-frez.inspectContextKeys",
