--- a/package.json
+++ b/package.json
@@ -118,11 +118,8 @@
 		"webpack": "^5.10.0",
 		"webpack-cli": "^4.2.0"
 	},
-	"#dependencies": {
-		"jsonc-parser": "3.0.0"
-	},
-	"dependencies": {
-		"comment-json": "4.1.0"
-	},
-	"#extensionDependencies": []
+	"dependencies": {},
+	"extensionDependencies": [
+        "tuttieee.emacs-mcx"
+    ]
 }
