--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "frez",
 	"description": "",
 	"repository": "https://github.com/jacktrades/vscode-frez",
-	"version": "0.0.66",
+	"version": "0.0.67",
 	"engines": {
 		"vscode": "^1.52.0"
 	},
@@ -15,6 +15,18 @@
 		"*"
 	],
 	"main": "./dist/extension.js",
+	"scripts": {
+		"vscode:prepublish": "npm run package",
+		"vsce-package": "vsce package",
+		"compile": "webpack --config ./build/node-extension.webpack.config.js",
+		"watch": "webpack --watch --config ./build/node-extension.webpack.config.js",
+		"package": "webpack --mode production --devtool hidden-source-map --config ./build/node-extension.webpack.config.js",
+		"test-compile": "tsc -p ./",
+		"test-watch": "tsc -watch -p ./",
+		"pretest": "npm run test-compile && npm run lint",
+		"lint": "eslint src --ext ts",
+		"test": "node ./out/test/runTest.js"
+	},
 	"contributes": {
 		"commands": [
 			{
@@ -91,17 +103,6 @@
 			}
 		]
 	},
-	"scripts": {
-		"vscode:prepublish": "npm run package",
-		"compile": "webpack --config ./build/node-extension.webpack.config.js",
-		"watch": "webpack --watch --config ./build/node-extension.webpack.config.js",
-		"package": "webpack --mode production --devtool hidden-source-map --config ./build/node-extension.webpack.config.js",
-		"test-compile": "tsc -p ./",
-		"test-watch": "tsc -watch -p ./",
-		"pretest": "npm run test-compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
-	},
 	"devDependencies": {
 		"@types/vscode": "^1.52.0",
 		"@types/glob": "^7.1.3",
@@ -116,10 +117,11 @@
 		"vscode-test": "^1.4.1",
 		"ts-loader": "^8.0.11",
 		"webpack": "^5.10.0",
-		"webpack-cli": "^4.2.0"
+		"webpack-cli": "^4.2.0",
+		"vsce": "^1.96.1"
 	},
 	"dependencies": {},
 	"extensionDependencies": [
-        "tuttieee.emacs-mcx"
-    ]
+		"tuttieee.emacs-mcx"
+	]
 }
